--- a/index.css
+++ b/index.css
@@ -132,10 +132,9 @@ p {
 	}
 }
 
-.app-store-btn::before {
-	padding-right: 8px;
-	content: '';
-	font-size: 16px;
+.app-store-btn {
+	width: 200px;
+	height: 70px;
 }
 
 .app-icon {
